<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_Login"
    android:background="@color/Black">

    <ImageView
        android:id="@+id/MUV_Logo_MainActivity"
        android:layout_width="317dp"
        android:layout_height="61dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toTopOf="@id/Login_Texto_MainActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_muv_yellow" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Pass_BOX_MainActivity"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="43dp"
        android:background="#FFFFFF"
        app:hintTextColor= "#373433"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@id/imageView_MainActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconContentDescription="User_Icon"
        app:startIconDrawable="@drawable/ic_key_solid">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_password_text_MainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/palavra_passe"
            android:inputType="textPassword"
            android:textColorHint="#FFD400" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView_MainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="193dp"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="26dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@id/Entrar_Motorista_MainActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_divider" />

    <TextView
        android:id="@+id/Login_Texto_MainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="69dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:maxLines= "1"
        app:layout_constraintBottom_toTopOf="@id/User_BOX_MainActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/User_BOX_MainActivity"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="48dp"
        android:background="#FFFFFF"
        android:maxLines= "1"
        app:hintTextColor= "#373433"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@id/Pass_BOX_MainActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconContentDescription="User_Icon"
        app:startIconDrawable="@drawable/ic_user_solid">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_login_text_MainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_utilizador"
            android:inputType="textEmailAddress"
            android:textColorHint="#FFD400" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Entrar_Motorista_MainActivity"
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/button_login_entrar"
        android:text="@string/entrar"
        android:textColor="#373433"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />
</androidx.constraintlayout.widget.ConstraintLayout>