<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".desambiguacao"
    android:background="@color/Black">

    <Button
        android:id="@+id/entrar3"
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#FFD400"
        android:text="Entrada Cliente"
        android:textColor="#373433"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/MUV_Logo"
        android:layout_width="317dp"
        android:layout_height="61dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toTopOf="@+id/Login_Texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_muv_yellow" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Pass_BOX"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="43dp"
        android:background="#FFFFFF"
        app:boxStrokeColor="#FFD400"
        android:maxLines= "1"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconContentDescription="User_Icon"
        app:startIconDrawable="@drawable/ic_key_solid">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/palavra_passe"
            android:inputType="textPassword"
            android:textColorHint="#9C27B0" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="193dp"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="26dp"
        android:layout_weight="1"
        android:maxLines= "1"
        app:layout_constraintBottom_toTopOf="@+id/Entrar_Motorista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_divider" />

    <TextView
        android:id="@+id/Login_Texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="69dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/User_BOX"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/User_BOX"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="48dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/Pass_BOX"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconContentDescription="User_Icon"
        app:startIconDrawable="@drawable/ic_user_solid">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/email_utilizador"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Entrar_Motorista"
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FFD400"
        android:text="@string/entrada_motorista"
        android:textColor="#373433"
        app:layout_constraintBottom_toTopOf="@+id/entrar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>